changes to home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,11 @@
+<html>
+    <body>
+        <h3>This is a home page for lab 1 of info3180.
+        </h3>
+    </body>
+</html>
+
+
 {% extends "base.html" %}
 
 
