--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
     <body>
         <h3>This is a home page for lab 1 of info3180.
         </h3>
+        <h4>This was customised by Justen Morgan</h4>
     </body>
 </html>
 
